# mes

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  hf-jobs-train-eegnet.yml  kaggle-chain.yml  mes-train-pipeline.yml  preflight.yml  publish-benchmarks.yml  publish-stroke-hf.yml  release.yml
backend/: __init__.py
backend/app/: main.py  schemas.py  storage.py  tasks.py
backend/app/api/: meta.py  participants.py  sessions.py
docs/: ENHANCEMENTS.md  api.md  benchmarks.md  cli.md  clinical-validation.md  clinical.md  comparison.md  datasets.md  hardware.md  index.md  joss-roadmap.md  limitations.md  releasing.md
docs/methods/: mes-formula.md  pipeline.md  preprint-outline.md  validation.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
mes_core/: __init__.py  artifacts.py  cli.py  config.py
mes_core/data/: benchmarks.json  liu2024_clinical.tsv  mes_weights_right_hand.json  mes_weights_right_hand_stroke.json  stroke_validation_gates.json
mes_core/eval/: __init__.py  clinical.py  metrics.py  outcomes.py  parquet.py  validate.py
mes_core/features/: __init__.py  bandpower.py  csp.py  lateralization.py  mrcp.py  riemann.py
mes_core/io/: __init__.py  generic.py  hf.py  openbci.py
mes_core/models/: __init__.py  inference.py  onnx_export.py
mes_core/pipeline/: __init__.py  session.py
mes_core/preprocessing/: __init__.py  montage.py  pipeline.py
mes_core/quality/: __init__.py  gates.py
mes_core/scoring/: __init__.py  mes.py  recovery.py  rehab_proxy.py  rest.py
mes_core/viz/: __init__.py  report.py  topomap.py
notebooks/kaggle/: 00_preprocess.py  01_train_riemannian.py  02_train_eegnet.py  03_validate.py  _kaggle_io.py
scripts/: check_stroke_gates.py  eval_model_quality.py  fetch_liu2024_clinical.py  fit_mes_weights.py  generate_protocol_test_file.py  gh_preprocess_physionet.py  gh_train_riemannian.py  hf_deploy.py  hf_jobs_train_eegnet.py  hf_sync.py  kaggle_submit.py  preflight.py  preprocess_moabb_datasets.py  publish_benchmarks.py  publish_hf_stroke_assets.py  run_all_kaggle.sh  run_clinical_validation.py  run_protocol_e2e.py  run_stroke_pipeline.py  train_eegnet_stroke.py
tests/: conftest.py
tests/e2e/: demo.spec.ts  package-lock.json  package.json  playwright.config.ts
tests/fixtures/: synth.py
tests/integration/: test_api.py
tests/property/: test_signal_props.py
tests/unit/: test_artifacts.py  test_features.py  test_inference.py  test_io.py  test_lateralization_stroke.py  test_mes.py  test_pipeline.py  test_preprocessing.py  test_protocol_score.py  test_quality.py  test_rehab_proxy.py  test_rest.py  test_synth.py  test_viz.py
validation_out/clinical/: clinical_validation.json  clinical_validation.md
(+26 files in other folders)
