[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mes"
version = "0.2.1"
description = "Motor Engagement Signal: quantifying neural drive for movement recovery from EEG."
authors = [{ name = "MES Project" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26,<2.2",
    "scipy>=1.11,<2",
    "pandas>=2.1,<3",
    "scikit-learn>=1.4,<2",
    "pyarrow>=15",
    "mne>=1.7,<2",
    "pyriemann>=0.6,<1",
    "onnx>=1.16,<2",
    "onnxruntime>=1.17,<2",
    "pydantic>=2.6,<3",
    "structlog>=24.1",
    "typer>=0.12",
    "rich>=13.7",
    "huggingface_hub>=0.24,<1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "python-multipart>=0.0.9",
    "weasyprint>=61",
    "jinja2>=3.1",
    "aiosqlite>=0.19",
    "matplotlib>=3.8",
]
train = [
    "torch>=2.2,<3",
    "braindecode>=0.8,<1",
    "moabb>=1.0",
    "mlflow>=2.10,<3",
    "autoreject>=0.4",
    "mne-icalabel>=0.6",
    "jupytext>=1.16",
    "kaggle>=1.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.99",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "freezegun>=1.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
mes = "mes_core.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mes_core*", "backend*"]

[tool.setuptools.package-data]
"backend" = ["app/templates/**/*", "app/static/**/*"]
"mes_core" = ["data/*.json"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that take >5s",
    "integration: requires backend stack",
    "needs_network: requires internet",
]
filterwarnings = [
    "ignore::DeprecationWarning:mne.*",
    "ignore::DeprecationWarning:sklearn.*",
]

[tool.coverage.run]
branch = true
source = ["mes_core", "backend"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "C4", "RUF"]
ignore = ["E501", "B008", "N803", "N806", "SIM105", "RUF005"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]
"scripts/**" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["notebooks/", "build/", "tests/fixtures/"]

[[tool.mypy.overrides]]
module = "mes_core.*"
disallow_untyped_defs = true
